# python_study_things

./: README.md  pyproject.toml  users.db
OOP_book/part2/: mixin.py
SOLID/: OCP.py  SRP.py
decorators/: async_deco.py  cash_deco.py  func()().py  main.py  training_from_scratch.py
patterns/Dependency Enjection/: base_di.py  task_4.py  test_base_di.py
patterns/decorator/: 1_easy.py  retry.py  timeit.py
patterns/service_and_repository_patterns/: dependencies.py  dependendcies.py  main.py  notes_app.py  repositories.py  schemas.py  services.py
pytest/tech_with_tim_video_exercise/Mock/: db.py  main.py  service.py  test_db.py  test_main.py  test_service.py
pytest/tech_with_tim_video_exercise/basic/: add_divide.py  test_add_divide.py  test_weather.py
pytest/tech_with_tim_video_exercise/fixtures/: exceptions.py  main.py  models.py  test_main.py
