[project]
name = "python-study-things"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.49.0",
]
